# hotel-mcp

./: .dockerignore  .env.example  .gitignore  .mcp.json  ARCHITECTURE.md  Dockerfile  claude_desktop_config.example.json  pyproject.toml  railway.json
src/: config.py  server.py
src/adapters/: __init__.py  registry.py
src/adapters/crm/: base.py  mock.py  salesforce.py
src/adapters/pms/: base.py  mews.py  mock.py  opera.py
src/models/: __init__.py  audit.py  guest.py  reservation.py  room.py  sync.py
src/prompts/: hotel_prompts.py
src/resources/: hotel_resources.py
src/tools/: guest_tools.py  reservation_tools.py  room_tools.py  sync_tools.py
src/utils/: audit.py  reconcile.py
tests/: test_reconcile.py
