[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "hotel-mcp-server"
version = "0.1.0"
description = "MCP integration layer for hotel operations — PMS, CRM, housekeeping, and beyond"
authors = [{ name = "Hotel MCP Team", email = "eng@hotel-mcp.io" }]
license = { text = "Proprietary" }
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "mcp>=1.2.0",
    "pydantic[email]>=2.7.0",
    "httpx>=0.27.0",
    "structlog>=24.2.0",
    "tenacity>=8.3.0",
    "anyio>=4.4.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "pytest-asyncio>=0.23.0",
    "pytest-httpx>=0.30.0",
    "ruff>=0.4.0",
    "mypy>=1.10.0",
]

[project.scripts]
hotel-mcp = "src.server:main"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
strict = true
plugins = ["pydantic.mypy"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
